--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#849E7D</color>
-    <color name="purple_500">#00BCD4</color>
+    <color name="purple_500">#FA2C2047</color>
     <color name="purple_700">#00BCD4</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
